nullaway_error_EB242D71-BF87-4546-838C-F4B4550E1B3A.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/validation/DefaultMessageCodesResolver.java:247: error: [NullAway] enhanced-for expression elements is @Nullable
			for (String element : elements) {
			                      ^
    (see http://t.uber.com/nullaway )
